# l2-geth-public

./: .gitignore  Earthfile  Makefile  README.md  SECURITY.md  docker-compose.yaml  go.mod  go.sum  interfaces.go  oss-fuzz.sh
accounts/: accounts.go  accounts_test.go  hd.go  manager.go
common/: bytes.go  debug.go  types.go  types_test.go
consensus/: consensus.go  errors.go  merger.go
console/: bridge.go  bridge_test.go  console.go  console_test.go
core/: bench_test.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_insert.go  blockchain_reader.go  blockchain_repair_test.go  blockchain_sethead_test.go  blockchain_snapshot_test.go  blockchain_test.go  blocks.go  bloom_indexer.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  dao_test.go  error.go  events.go  evm.go  forkchoice.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis_alloc.go  genesis_test.go  headerchain.go  headerchain_test.go  mkalloc.go  rlp_test.go  sender_cacher.go  state_prefetcher.go  state_processor.go  state_processor_test.go  state_transition.go  state_transition_test.go  superchain.go  superchain_test.go  txindexer.go  txindexer_test.go  (+3 more)
crypto/: crypto.go  crypto_test.go  signature_cgo.go  signature_nocgo.go  signature_test.go
eth/: api.go  api_admin.go  api_backend.go  api_debug.go  api_debug_test.go  api_miner.go  backend.go  bloombits.go  dropper.go  handler.go  handler_eth.go  handler_eth_test.go  handler_snap.go  handler_test.go  peer.go  peerset.go  state_accessor.go  sync.go  (+1 more)
rollup/circuitcapacitychecker/libzkp/: Cargo.toml  libzkp.h
rollup/circuitcapacitychecker/libzkp/.cargo/: config
rollup/circuitcapacitychecker/libzkp/src/: lib.rs
(+1200 files in other folders)
